url again changed

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
     <meta name="author" content="Debashis Paul" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://debashis-11101-srijib.github.io/debashispaul.github.io/" /> 
+    <meta property="og:url" content="https://debashis-11101-srijib.github.io/my-portfolio/" /> 
     <meta property="og:title" content="Debashis Paul | Full Stack Web Developer Portfolio" />
     <meta property="og:description" content="Explore the professional portfolio of Debashis Paul, a Full Stack Web Developer specializing in React, Node.js, and scalable web solutions." />
     <meta property="og:image" content="https://placehold.co/1200x630/8B5CF6/FFFFFF/png?text=Debashis+Paul+Portfolio" /> 
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://debashis-11101-srijib.github.io/debashispaul.github.io/" />
+    <meta property="twitter:url" content="https://debashis-11101-srijib.github.io/my-portfolio/" />
     <meta property="twitter:title" content="Debashis Paul | Full Stack Web Developer Portfolio" />
     <meta property="twitter:description" content="Explore the professional portfolio of Debashis Paul, a Full Stack Web Developer specializing in React, Node.js, and scalable web solutions." />
     <meta property="twitter:image" content="https://placehold.co/1200x675/8B5CF6/FFFFFF/png?text=Debashis+Paul+Portfolio" />  
@@ -28,7 +28,7 @@
     
      <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-     <link rel="canonical" href="https://debashis-11101-srijib.github.io/debashispaul.github.io/" />  
+     <link rel="canonical" href="https://debashis-11101-srijib.github.io/my-portfolio/" />  
 
      
     <script src="https://cdn.tailwindcss.com"></script>
